* Tue Jan 15 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.0
- Update documentation
- Add acceptance tests for obtaining certs via CMC and certmonger
- Update the upper bound of stdlib to < 6.0.0

* Fri Dec 28 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0
- Minor breaking changes - Module still **experimental**
- Fix the configuration variants required for the documented layout
  - Add acceptance tests for swapping out puppet certificates
    - This is the "real life" test case outside of just setting up the CA
      infrastructure

* Mon Nov 05 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.1
- Update to Hiera 5
- Update contribution guide URL in README.md

* Mon Feb 12 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.0
- First cut of a working Dogtag setup

* Mon Jan 29 2018 SIMP Team <simp-project.com> - 0.0.1
- This is the initial code for a `simp_pki_service` module, which is a
  SIMP-oriented installation of the Dogtag Certificate System.